--- a/styles/media.scss
+++ b/styles/media.scss
@@ -11,6 +11,7 @@
   line-height: 1.5;
 }
 
+
 /* INDEX TABLET AND PHONE  */
 @media (max-width:1200px) {
   section{
@@ -20,6 +21,9 @@
     width: 90%;
   }
   .place_section{
+    .text_block{
+      width: 80%;
+    }
   .img_block{
     flex-wrap: wrap;
     justify-content: space-around;
@@ -62,7 +66,7 @@
       }
     }
   nav{
-    width: 50%;
+    width: 70%;
     margin: 0;
     ul{
       li{
@@ -97,9 +101,45 @@
 }
 }
 .proffessional_section{
+  .container{
+    .text_block{
+      margin-bottom: 50px;
+    }
   .wrap{
     flex-direction: column;
+    height: auto;
+    margin-bottom: 100px;
+    align-self: center;
+    .list_content{
+      width: 100%;
+    ul{
+      display: flex;
+      flex-wrap: wrap;
+      align-items: center;
+      justify-content: space-around;
+      li{
+        width: 400px;
+      }
+      .li_f{
+        margin: 0 0 30px 0;
+      }
+      .li_s{
+        margin: 0 0 30px 0;
+      }
+      .li_t{
+        margin: 0 0 30px 0;
+      }
+    }
   }
+    .img_content{
+    width: 60%;
+    height: 650px;
+    margin-top: 50px;
+    margin-bottom: 50px;
+    margin: auto;
+}
+  }
+}
 }
 .how_order_section{
   .background_block{
@@ -107,18 +147,6 @@
       width: 30%;
     }
   }
-}
-.faq_section{
-  .wrap{
-.how_order_block{
-  .form_block{
-.sub_input{
-  font-size: 16px;
-  padding: 0;
-}
-}
-}
-}
 }
 .feedback_section{
   .text_content{
@@ -128,4 +156,331 @@
     width: 90%;
   }
 }
+.what_we_do_section{
+  .container{
+  .wrap{
+    flex-wrap: wrap;
+    justify-content: space-around;
+    .list_item{
+      margin-bottom: 30px;
+    }
+  }
+}
+}
+.how_order_section{
+  .text_block{
+    justify-content: center;
+    margin-right: 0;
+    h3{
+      text-align: center;
+    }
+  }
+  .background_block{
+    height: auto;
+    flex-direction: column;
+    img{
+      width: 85%;
+      margin-left: 15%;
+      margin-top: -10%;
+    }
+    .form_block{
+      text-align: center;
+      span{
+        margin-top: -85px;
+        text-align: center;
+      }
+      .your_email{
+        width: 100%;
+        padding: 15px;
+      }
+      .sub_input{
+        margin: 20px auto;
+      }
+    }
+  }
+}
+.our_projects_section{
+.container{
+  .fig_a{
+    margin: auto;
+    margin-top: 30px;
+    text-align: center;
+    position: static;
+  a{
+    padding: 7px 50px;
+    font-size: 25px;
+    color: #fff;
+    background:#363a1d;
+    transition: 0.5s;
+    border-radius: 0;
+    &:hover{
+      background: #363a1d;
+    }
+  }
+  }
+   .img_block{
+   img{
+     width: 48%;
+   }
+  }
+}
+}
+.feedback_section{
+  .container {
+  .slider_feedback{
+    width: 100%;
+  .slider_item{
+    .garden_img{
+      width: 45%;
+    }
+    .text_content{
+      width: 50%;
+      img{
+        margin-bottom: 8px;
+      }
+      h4{
+        font-size: 35px;
+        margin-bottom: 5px;
+      }
+      span{
+        font-size: 18px;
+        margin-bottom: 10px;
+
+      }
+      p{
+        font-size: 14px;
+        width: 100%;
+      }
+    }
+  }
+}
+}
+}
+.faq_section{
+  .container{
+    .wrap{
+      height: auto;
+      .faq_block{
+    .text_block{
+      h3{
+        margin-bottom: 20px;
+      }
+    }
+  }
+  .accordion{
+    .accordion_item{
+     .accordion-item_trigger{
+       span{
+    font-size: 15px;
+  }
+  }
+  .accordion-item_content{
+    p{
+      font-size: 14px;
+    }
+  }
+}
+}
+.how_order_block{
+  height: auto;
+  h4{
+    font-size: 24px;
+    br{
+      display: none;
+    }
+  }
+  span{
+    font-size: 16px;
+  }
+  img{
+    width: 120%;
+    margin: 0;
+  }
+  .form_block{
+  .access_label{
+    font-size: 16px;
+  }
+  .sub_input{
+    font-size: 18px;
+    padding: 7px 30px;
+  }
+}
+}
+}
+}
+}
+.still_questions_section{
+  .container{
+    .wrap{
+    .green_btn{
+      a{
+      padding: 7px 30px;
+    }
+      a{
+        &::before{
+          background-size: 70%;
+          left: -143px;
+          bottom: -56px;
+        }
+      }
+    }
+  }
+  }
+}
+footer{
+  .container{
+  height: auto;
+  .wrap{
+  .contacts_block{
+    .tel{
+      font-size: 15px;
+      margin: 0 0 50px 0;
+    }
+    .email{
+      font-size: 15px;
+    }
+    span{
+      font-size: 15px;
+    }
+  }
+  .social_block{
+  a{
+    font-size: 8px;
+  }
+  }
+}
+}
+}
+}
+@media (max-width: 835px){
+  .green_background{
+    background: #DDE3E1;
+  }
+  .feedback_section{
+    .container {
+    .slider_feedback{
+      width: 90%;
+      margin: auto;
+      .slick-arrow{
+        background: transparent;
+        width: 0;
+        height: 0;
+      }
+      .slick-dots{
+        left: 38%;
+      }
+      .slider_item{
+      padding: 2%;
+      flex-direction: column-reverse;
+      .garden_img{
+        width: 100%;
+        margin: auto;
+      }
+      .text_content{
+        width: 100%;
+        margin-bottom: 20px;
+        h4{
+          font-size: 40px;
+        }
+        span{
+          font-size: 22px;
+        }
+        p{
+          font-size: 18px;
+        }
+      }
+    }
+  }
+  }
+  }
+  .faq_section{
+    .container{
+      .wrap{
+        .faq_block{
+          width: 100%;
+      .text_block{
+        width: 100%;
+        h3{
+        text-align:center;
+      }
+      }
+    }
+    .accordion{
+      width: 100%;
+      .accordion_item{
+        width: 100%;
+  }
+  }
+  .how_order_block{
+    display: none;
+  }
+  }
+  }
+  }
+  .still_questions_section{
+    .container{
+      .wrap{
+        flex-direction: column;
+        .text_block{
+          width: 100%;
+          margin-bottom: 30px;
+          br{
+            display: none;
+          }
+        }
+      .green_btn{
+        a{
+          &::before{
+            height: 90px;
+            background: url("../images/icons/mob_strelka.png") no-repeat;
+            left: 265px;
+            top: -65px;
+          }
+        }
+      }
+    }
+    }
+  }
+}
+@media (max-width:768px){
+  header{
+    z-index: 50;
+    .header__burger{
+      display: block;
+      position: relative;
+      width: 30px;
+      height: 20px;
+      span{
+        position: absolute;
+        background: #fff;
+        left:0;
+        width: 100%;
+        height: 2px;
+        top: 9px;
+      }
+    }
+    .header__burger::before,
+    .header__burger::after{
+      content: "";
+      background:#fff;
+      position: absolute;
+      width: 100%;
+      height: 2px;
+      left:0;
+    }
+    .header__burger{
+      top:0;
+    }
+    .header__burger::after{
+      bottom: 0;
+    }
+    // .header__menu{
+    //   position: fixed;
+    //   top: 0;
+    //   left:0;
+    //   width: 100%;
+    //   height: 100vh;
+    //   background: #363a1d;
+    // }
+  }
 }
