--- a/styles/style.css
+++ b/styles/style.css
@@ -108,12 +108,25 @@ h3 span {
           align-items: center;
 }
 
+.header_section .container header .header__menu {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  width: 70%;
+}
+
 .header_section .container header nav {
-  margin-left: 200px;
-  width: 40%;
+  width: 70%;
 }
 
 .header_section .container header nav ul {
+  width: 100%;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -142,7 +155,7 @@ h3 span {
 }
 
 .header_section .container header .nav_links {
-  width: 20%;
+  width: 25%;
 }
 
 .header_section .container header .nav_links a {
