--- a/styles/style.scss
+++ b/styles/style.scss
@@ -97,10 +97,17 @@ h3{
       display: flex;
     justify-content: space-between;
     align-items: center;
+    .header__menu{
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      width: 70%;
+    }
     nav{
-      margin-left: 200px;
-      width: 40%;
+
+      width: 70%;
       ul{
+        width: 100%;
         display: flex;
         justify-content: space-between;
         li{
@@ -122,7 +129,7 @@ h3{
       }
     }
     .nav_links{
-      width: 20%;
+      width: 25%;
       a{
         display: block;
         text-align: center;
