--- a/styles/media.css
+++ b/styles/media.css
@@ -376,8 +376,35 @@
 }
 
 @media (max-width: 768px) {
+  h3 {
+    font-size: 24px;
+  }
   body.lock {
     overflow: hidden;
+  }
+  .header_section {
+    height: 566px;
+  }
+  .header_section .left_branch {
+    width: 45%;
+    z-index: 70;
+    opacity: 50%;
+  }
+  .header_section .container .title_part {
+    width: 95%;
+  }
+  .header_section .container .title_part span {
+    font-size: 16px;
+  }
+  .header_section .container .title_part h1 {
+    font-size: 24px;
+    display: block;
+    width: 90%;
+  }
+  .header_section .container .title_part h2 {
+    display: block;
+    width: 90%;
+    font-size: 18px;
   }
   .header_section .container header {
     z-index: 50;
@@ -440,7 +467,7 @@
     top: 0;
   }
   .header_section .container header .header__menu {
-    top: -100%;
+    top: -130%;
     padding-top: 45%;
     position: fixed;
     -webkit-box-orient: vertical;
@@ -476,18 +503,74 @@
     width: 80%;
     margin-bottom: 20px;
   }
+  .place_section {
+    margin-top: -56px;
+  }
+  .place_section .text_block {
+    width: 100%;
+  }
   .place_section .text_block p {
+    width: 100%;
+    font-size: 16px;
+  }
+  .place_section .text_block p br {
+    display: none;
+  }
+  .place_section .left_branch {
+    width: 35%;
+    top: 35%;
+  }
+  .place_section .right_branch {
+    width: 35%;
+    top: 35%;
+  }
+  .place_section .img_block {
     width: 100%;
   }
   .place_section .img_block img {
     width: 100%;
   }
+  .proffessional_section {
+    margin-top: -150px;
+  }
+  .proffessional_section .container .text_block {
+    width: 100%;
+  }
+  .proffessional_section .container .wrap {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: reverse;
+        -ms-flex-direction: column-reverse;
+            flex-direction: column-reverse;
+  }
+  .proffessional_section .container .wrap .list_content {
+    margin-bottom: 30px;
+  }
+  .proffessional_section .container .wrap .list_content ul li {
+    -webkit-box-align: start;
+        -ms-flex-align: start;
+            align-items: flex-start;
+  }
+  .proffessional_section .container .wrap .list_content ul li p {
+    font-size: 16px;
+  }
+  .proffessional_section .container .wrap .img_content {
+    width: 100%;
+  }
+  .proffessional_section .container .wrap .img_content span {
+    font-size: 15px;
+    -webkit-transform: rotate(270deg);
+            transform: rotate(270deg);
+    top: 300px;
+    left: -70px;
+  }
   .proffessional_section .container .wrap .img_content .first_img {
-    width: 50%;
+    width: 100%;
+    margin: auto;
   }
   .proffessional_section .container .wrap .img_content .second_img {
-    width: 70%;
-    left: 0%;
+    width: 90%;
+    top: 31%;
+    left: 10%;
   }
   .still_questions_section .container .wrap .green_btn a::before {
     left: 0;
