--- a/styles/media.scss
+++ b/styles/media.scss
@@ -443,11 +443,36 @@ footer{
 }
 }
 @media (max-width:768px){
+  h3{
+    font-size: 24px;
+  }
   body.lock{
     overflow: hidden;
   }
   .header_section{
+    height: 566px;
+    .left_branch{
+      width: 45%;
+      z-index: 70;
+      opacity: 50%;
+    }
     .container{
+      .title_part{
+        width: 95%;
+        span{
+          font-size: 16px;
+        }
+        h1{
+          font-size: 24px;
+          display: block;
+          width: 90%;
+        }
+        h2{
+          display: block;
+          width: 90%;
+          font-size: 18px;
+        }
+      }
   header{
     .logo_box{
       width: 40%;
@@ -504,7 +529,7 @@ footer{
       top:0;
     }
     .header__menu{
-      top: -100%;
+      top: -130%;
       padding-top: 45%;
       position: fixed;
       flex-direction: column;
@@ -541,28 +566,71 @@ footer{
   }
 }
 }
+
   .place_section{
+    margin-top: -56px;
     .text_block{
+      width: 100%;
       p{
         width: 100%;
+        font-size: 16px;
+        br{
+          display: none;
+        }
       }
     }
+    .left_branch{
+      width: 35%;
+    top: 35%;
+    }
+    .right_branch{
+      width: 35%;
+    top: 35%;
+    }
+
     .img_block{
+      width: 100%;
 img{
   width: 100%;
-}
+
     }
   }
+  }
   .proffessional_section{
+    margin-top: -150px;
     .container{
+      .text_block{
+        width: 100%;
+      }
       .wrap{
+        flex-direction: column-reverse;
+        .list_content{
+          margin-bottom: 30px;
+          ul{
+          li{
+            align-items: flex-start;
+            p{
+            font-size: 16px;
+          }
+          }
+        }
+        }
         .img_content{
+          width: 100%;
+          span{
+            font-size: 15px;
+            transform: rotate(270deg);
+            top:300px;
+            left: -70px;
+          }
     .first_img{
-      width: 50%;
+      width: 100%;
+      margin: auto;
     }
     .second_img{
-      width: 70%;
-      left:0%;
+      width: 90%;
+      top:31%;
+      left:10%;
     }
   }
   }
